--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
   "license": "MIT",
   "devDependencies": {
     "live-server": "^1.2.1"
+  },
+  "dependencies": {
+    "bootstrap-icons": "^1.7.0"
   }
 }
